--- a/app/assets/stylesheets/components/_filter-panel.scss
+++ b/app/assets/stylesheets/components/_filter-panel.scss
@@ -4,13 +4,6 @@
   background-color:  govuk-colour("light-grey");
   padding: govuk-spacing(3);
   margin-top: govuk-spacing(2);
-
-  // Fix checkboxes and radios not having white inner background when on non-white background
-  .govuk-checkboxes__label, .govuk-radios__label {
-    &::before {
-        background-color: govuk-colour('white');
-    }
-  }
 }
 
 .app-c-filter-panel__header {
@@ -59,4 +52,103 @@
     vertical-align: baseline;
     margin-right: govuk-spacing(1);
   }
+}
+
+.app-c-filter-panel__section {
+  border-top: 1px solid $govuk-border-colour;
+  padding-top: 20px;
+  margin-bottom: 20px;
+
+
+  &:first-child {
+    border-top: none;
+  }
+
+  .govuk-form-group {
+    margin-bottom: 0;
+  }
+
+  .govuk-details {
+    margin: 0;
+
+    &__text {
+      border-left: none;
+      padding-left: 0;
+      margin: 0;
+    }
+
+    &[open] .govuk-details__summary::before {
+      border-style: solid;
+      border-width: 2px 2px 0 0;
+      content: '';
+      display: inline-block;
+      height: 10px;
+      left: 0;
+      position: relative;
+      vertical-align: middle;
+      width: 10px;
+      border-color: $govuk-text-colour;
+      clip-path: unset;
+
+      top: 0;
+      transform: rotate(-45deg);
+    }
+
+    .govuk-details__summary::before {
+      border-style: solid;
+      border-width: 2px 2px 0 0;
+      content: '';
+      display: inline-block;
+      height: 10px;
+      left: 0;
+      position: relative;
+      vertical-align: middle;
+      width: 10px;
+      border-color: $govuk-text-colour;
+      clip-path: unset;
+
+      top: -5px;
+      transform: rotate(135deg);
+    }
+
+    .govuk-details__summary-text {
+      display: flex;
+      width: 100%; 
+      color: $govuk-text-colour;
+      padding-left: 10px;
+      @include govuk-font(19, $weight: bold);
+    }
+  }
+
+  .govuk-details__summary, .govuk-fieldset__legend {
+    display: flex;
+    width: 100%;
+    padding-left: 0;
+
+    &-text, .govuk-fieldset__heading {
+      display: flex;
+      width: 100%; 
+    }
+  }
+
+  .govuk-checkboxes__label, .govuk-radios__label {
+    &::before {
+      background-color: govuk-colour('white');
+    }
+  }
+}
+
+.app-c-filter-panel__section-header {
+  display: flex;
+  width: 100%;
+  margin: 0;
+}
+
+.app-c-filter-panel__section-title {
+  flex-grow: 1;
+}
+
+.app-c-filter-panel__section-count {
+  @include govuk-font(16, $weight: regular);
+  text-decoration: none;
 }
