--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -66,7 +66,7 @@
             <%= render 'components/filters/topic' %>
           </div>
 
-          <div class="app-c-filter-panel__section">
+          <div class="app-c-filter-panel__section border-hack govuk-!-padding-bottom-3">
             <%= render 'components/filters/type' %>
           </div>
 
@@ -75,7 +75,7 @@
             <%= render hf, facet: hf %>
           <% end %>
 
-          <div class="govuk-button-group">
+          <div class="govuk-button-group govuk-!-margin-top-2">
             <%= render "govuk_publishing_components/components/button", {
               text: "Apply filters",
               type: "submit",
