--- a/app/assets/stylesheets/components/_filter-panel.scss
+++ b/app/assets/stylesheets/components/_filter-panel.scss
@@ -1,4 +1,5 @@
 @import "govuk_publishing_components/individual_component_support";
+@import "govuk_publishing_components/components/mixins/prefixed-transform";
 
 .app-c-filter-panel__content {
   background-color:  govuk-colour("light-grey");
@@ -36,9 +37,9 @@
       color: $govuk-link-hover-colour;
     }
   }
-  
+
   .app-c-filter-panel__button[aria-expanded="true"] .app-c-filter-panel__button-icon {
-    transform: translateY(0) rotate(-135deg);
+    @include prefixed-transform($translateY: 0, $rotate: -135deg);
   }
 
   .app-c-filter-panel__button-icon {
@@ -46,10 +47,11 @@
     border-width: 0 2px 2px 0;
     height: 0.5rem;
     pointer-events: none;
-    transform: translateY(-50%) rotate(45deg);
     width: 0.5rem;
     display: inline-block;
     vertical-align: baseline;
     margin-right: govuk-spacing(1);
+
+    @include prefixed-transform($translateY: -50%, $rotate: 45deg);
   }
 }
