--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -46,7 +46,7 @@
 
         <%= render "components/filter_panel", {
           button_text: "Filter and sort",
-          result_count: result_set_presenter.total_count,
+          result_text: result_set_presenter.displayed_total,
           margin_bottom: 3,
         } do %>
           TODO: Add filter panel content here
