--- a/app/assets/stylesheets/components/_filter-section.scss
+++ b/app/assets/stylesheets/components/_filter-section.scss
@@ -1,5 +1,5 @@
 @import "govuk_publishing_components/individual_component_support";
-@import "govuk_publishing_components/components/mixins/prefixed-transform";
+@import "mixins/chevron";
 
 .app-c-filter-section {
   border-bottom: 1px solid $govuk-border-colour;
@@ -15,9 +15,7 @@
   }
 
   &[open] .app-c-filter-section__summary {
-    &::before {
-      @include prefixed-transform($translateY: 30%, $rotate: -45deg);
-    }
+    @include chevron(true);
   }
 }
 
@@ -27,6 +25,7 @@
   width: 100%;
   cursor: pointer;
   color: $govuk-text-colour;
+  @include chevron;
 
   &:hover .app-c-filter-section__summary-heading {
     @include govuk-link-decoration;
@@ -36,21 +35,6 @@
   &:focus .app-c-filter-section__summary-heading {
     background-color: $govuk-focus-colour;
     @include govuk-focused-text;
-  }
-
-  &::before {
-    border-style: solid;
-    border-width: 2px 2px 0 0;
-    content: '';
-    display: inline-block;
-    height: govuk-spacing(2);
-    left: govuk-spacing(1);
-    position: relative;
-    vertical-align: middle;
-    width: govuk-spacing(2);
-    border-color: $govuk-text-colour;
-    clip-path: unset;
-    @include prefixed-transform($translateY: -25%, $rotate: 135deg);
   }
 
   &:focus-visible {
