--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -48,31 +48,12 @@
           button_text: "Filter and sort",
           result_text: result_set_presenter.displayed_total,
         } do %>
-          <%= render "components/filter_section", {
-            open: true,
-            heading_text: "Filter 1"
-          } do %>
-            <span>filter section content</span>
-          <% end %>
-
-          <%= render "components/filter_section", {
-            status_text: "1 Selected",
-            heading_text: "Filter 2"
-          } do %>
-            <span>filter section content</span>
-          <% end %>
-
-          <%= render "components/filter_section", {
-            heading_text: "Filter 3"
-          } do %>
-            <span>filter section content</span>
-          <% end %>
-
-          <%= render "components/filter_section", {
-            status_text: "1 Selected",
-            heading_text: "Filter 4"
-          } do %>
-            <span>filter section content</span>
+          <% facets.each_with_index_and_count do |facet, index, count| %>
+            <%=
+              render partial: "finders/all_content_finder_facets/#{facet.to_partial_path}",
+                object: facet,
+                locals: { index:, count: }
+            %>
           <% end %>
         <% end %>
 
