--- a/app/views/components/_filter_section.html.erb
+++ b/app/views/components/_filter_section.html.erb
@@ -4,7 +4,7 @@
   shared_helper = GovukPublishingComponents::Presenters::SharedHelper.new(local_assigns)
   open ||= nil
   status_text ||= ""
-  heading_text ||= ""
+  visually_hidden_heading_prefix ||= ""
   heading_level ||= 2
   summary_aria_attributes ||= {}
 
@@ -16,7 +16,9 @@
 <%= tag.details(**component_helper.all_attributes) do %>
   <%= tag.summary class: "app-c-filter-section__summary", aria: summary_aria_attributes do %>
       <%= content_tag("h#{heading_level}", class: "app-c-filter-section__summary-heading") do %>
-        <span class="govuk-visually-hidden">Filter by</span>
+        <% if visually_hidden_heading_prefix.present? %>
+          <span class="govuk-visually-hidden"><%= visually_hidden_heading_prefix %></span>
+        <% end %>
         <%= heading_text %>
       <% end %>
 
