--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -48,6 +48,8 @@
           button_text: "Filter and sort",
           result_text: result_set_presenter.displayed_total,
         } do %>
+          <%= render "finders/all_content_finder_facets/sort_options" %>
+
           <% facets.each_with_index_and_count do |facet, index, count| %>
             <%=
               render partial: "finders/all_content_finder_facets/#{facet.to_partial_path}",
