Filter panel: Force checkbox/radio background
GOV.UK Frontend radio and checkboxes are rendered with a transparent
background, which makes them look wrong on this component's grey
background. This is intentional in GOV.UK Frontend and unlikely to
change (see https://github.com/alphagov/govuk-frontend/issues/1625).

--- a/app/assets/stylesheets/components/_filter-panel.scss
+++ b/app/assets/stylesheets/components/_filter-panel.scss
@@ -5,6 +5,15 @@
   background-color:  govuk-colour("light-grey");
   padding: 0 govuk-spacing(3);
   margin-top: govuk-spacing(2);
+
+  // GOV.UK Frontend radio and checkboxes are rendered with a transparent background, which makes
+  // them look wrong on this component's grey background. This is intentional in GOV.UK Frontend and
+  // unlikely to change (see https://github.com/alphagov/govuk-frontend/issues/1625).
+  .govuk-checkboxes__label, .govuk-radios__label {
+    &::before {
+        background-color: govuk-colour('white');
+    }
+  }
 }
 
 .app-c-filter-panel__header {
