Filter panel: Fix hover underline
There was a stray space at the beginning of the button element which was
causing the underline to cover more than just the text. This removes it
and increases the chevron margin instead.

--- a/app/views/components/_filter_panel.html.erb
+++ b/app/views/components/_filter_panel.html.erb
@@ -24,9 +24,7 @@
       id: button_id,
       class: "app-c-filter-panel__button govuk-link",
       aria: { expanded: "false", controls: panel_content_id }
-    ) do %>
-      <%= button_text %>
-    <% end %>
+    ) { button_text } %>
 
     <% if result_text.present? %>
       <%= content_tag("h2", class: "app-c-filter-panel__count") do %>
