Filter panel: Give panel its own bottom border
The filter panel is always supposed to have a bottom border, but
currently relies on the top border of the document list following it for
its border.

This gives the panel its own border so it's present even if there is no
document list following it, and accordingly removes it from the top of
the first document list item on the new all content finder view.

--- a/app/assets/stylesheets/components/_filter-panel.scss
+++ b/app/assets/stylesheets/components/_filter-panel.scss
@@ -1,6 +1,12 @@
 @import "govuk_publishing_components/individual_component_support";
 @import "mixins/chevron";
 
+.app-c-filter-panel {
+  padding-bottom: govuk-spacing(2);
+  margin-bottom: govuk-spacing(1);
+  border-bottom: 1px solid $govuk-border-colour;
+}
+
 .app-c-filter-panel__content {
   background-color:  govuk-colour("light-grey");
   padding: 0 govuk-spacing(3);
