Filter summary: Add bottom border
This adds a bottom border to the filter summary now that the document
list no longer comes with a top border.

--- a/app/assets/stylesheets/components/_filter-summary.scss
+++ b/app/assets/stylesheets/components/_filter-summary.scss
@@ -1,5 +1,10 @@
 @import "govuk_publishing_components/individual_component_support";
 
+.app-c-filter-summary {
+  padding-bottom: govuk-spacing(4);
+  border-bottom: 1px solid $govuk-border-colour;
+}
+
 .app-c-filter-summary__heading {
   display: block;
   margin-bottom: govuk-spacing(2);
