Filter summary: Implement "clear all" link
For now, as sorting is the only available item in the filter summary,
this is the same as the sort tag's remove link.

--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -58,7 +58,7 @@
         <% end %>
 
         <%= render "components/filter_summary", {
-          clear_all_href: "#",
+          clear_all_href: @filter_summary_presenter.clear_all_href,
           clear_all_text: "Clear all filters",
           heading_level: 3,
           heading_text: "Selected filters",
