Minor tweaks to filter summary component
- removing unneeded display block on heading
- merging Rails blocks at head of template

--- a/app/views/components/_filter_summary.html.erb
+++ b/app/views/components/_filter_summary.html.erb
@@ -1,6 +1,6 @@
-<% add_app_component_stylesheet("filter-summary") %>
-
 <%
+  add_app_component_stylesheet("filter-summary")
+
   shared_helper = GovukPublishingComponents::Presenters::SharedHelper.new(local_assigns)
   filters ||= []
 
