Filter summary: update to final-ish heading & link copy

--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -59,9 +59,9 @@
 
         <%= render "components/filter_summary", {
           clear_all_href: @filter_summary_presenter.clear_all_href,
-          clear_all_text: "Clear all filters",
+          clear_all_text: "Clear all filters and sorting",
           heading_level: 3,
-          heading_text: "Selected filters",
+          heading_text: "Active filters and sorting",
           filters: @filter_summary_presenter.items,
         } %>
 
