New all content finder: Pass index and count to filter sections
These will be used for GA4 tracking in the `filter_section` component.

--- a/app/views/finders/all_content_finder_facets/_date_facet.html.erb
+++ b/app/views/finders/all_content_finder_facets/_date_facet.html.erb
@@ -1,7 +1,9 @@
 <%= render "components/filter_section", {
   heading_text: date_facet.name,
   visually_hidden_heading_prefix: "Filter by",
-  id: "facet_date_#{date_facet.key}"
+  id: "facet_date_#{date_facet.key}",
+  index_section: index,
+  index_section_count: count,
 } do %>
   TODO: Date facet
 <% end %>
