--- a/app/views/finders/all_content_finder_facets/_option_select_facet.html.erb
+++ b/app/views/finders/all_content_finder_facets/_option_select_facet.html.erb
@@ -1,7 +1,9 @@
 <%= render "components/filter_section", {
   heading_text: option_select_facet.name,
   visually_hidden_heading_prefix: "Filter by",
-  id: "facet_option_select_#{option_select_facet.key}"
+  id: "facet_option_select_#{option_select_facet.key}",
+  index_section: index,
+  index_section_count: count,
 } do %>
   TODO: Option select facet
 <% end %>
