--- a/app/views/finders/all_content_finder_facets/_taxon_facet.html.erb
+++ b/app/views/finders/all_content_finder_facets/_taxon_facet.html.erb
@@ -1,7 +1,9 @@
 <%= render "components/filter_section", {
   heading_text: taxon_facet.name,
   visually_hidden_heading_prefix: "Filter by",
-  id: "facet_taxon_#{taxon_facet.key}"
+  id: "facet_taxon_#{taxon_facet.key}",
+  index_section: index,
+  index_section_count: count,
 } do %>
   TODO: Taxon facet
 <% end %>
