--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -37,6 +37,7 @@
             type: 'search',
             value: result_set_presenter.user_supplied_keywords,
             disable_corrections: true,
+            margin_bottom: 4,
           } %>
         </div>
 
