New all content finder UI: Implement topic facet

--- a/app/views/finders/all_content_finder_facets/_taxon_facet.html.erb
+++ b/app/views/finders/all_content_finder_facets/_taxon_facet.html.erb
@@ -5,5 +5,21 @@
   index_section: index,
   index_section_count: count,
 } do %>
-  TODO: Taxon facet
+  <div class="js-all-content-finder-taxonomy-select" data-ga4-change-category="update-filter select" data-ga4-section="Topic">
+    <%= render "govuk_publishing_components/components/select", {
+      id: 'level_one_taxon',
+      label: "Topic",
+      full_width: true,
+      options: taxon_facet.topics
+    } %>
+
+    <div class="js-required govuk-form-group" data-ga4-section="Sub-topic">
+      <%= render "govuk_publishing_components/components/select", {
+        id: 'level_two_taxon',
+        label: "Sub-topic",
+        full_width: true,
+        options: taxon_facet.sub_topics
+      } %>
+    </div>
+  </div>
 <% end %>
