New all content finder UI: Open panel on date error
If there is an error on the date fields (the only validated fields),
open the panel and section by default when the page loads.

--- a/app/views/finders/all_content_finder_facets/_date_facet.html.erb
+++ b/app/views/finders/all_content_finder_facets/_date_facet.html.erb
@@ -4,6 +4,8 @@
   id: "facet_date_#{date_facet.key}",
   index_section: index,
   index_section_count: count,
+  # Note date is the only validated facet, so if there is an error, it'll be here
+  open: @search_query.invalid?
 } do %>
   <%= render "govuk_publishing_components/components/input", {
     label: {
