--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -48,6 +48,7 @@
         <%= render "components/filter_panel", {
           button_text: "Filter and sort",
           result_text: result_set_presenter.displayed_total,
+          open: @search_query.invalid?,
         } do %>
           <% facets.each_with_visible_index_and_count do |facet, index, count| %>
             <%=
