--- a/app/views/finders/show_all_content_finder.html.erb
+++ b/app/views/finders/show_all_content_finder.html.erb
@@ -49,6 +49,8 @@
           button_text: "Filter and sort",
           result_text: result_set_presenter.displayed_total,
           open: @search_query.invalid?,
+          show_reset_link: filters_presenter.any_filters?,
+          reset_link_href: filters_presenter.reset_url,
         } do %>
           <% facets.each_with_visible_index_and_count do |facet, index, count| %>
             <%=
@@ -59,32 +61,15 @@
           <% end %>
         <% end %>
 
-        <%= render "components/filter_summary", {
-          clear_all_href: "#",
-          clear_all_text: "Clear all filters",
-          heading_level: 3,
-          heading_text: "Selected filters",
-          filters: [
-            {
-              label: "Filter 1",
-              value: "Value 1",
-              remove_href: "#",
-              visually_hidden_prefix: "Remove filter"
-            },
-            {
-              label: "Filter 2",
-              value: "Value 2",
-              remove_href: "#",
-              visually_hidden_prefix: "Remove filter"
-            },
-            {
-              label: "Filter 3",
-              value: "Value 3",
-              remove_href: "#",
-              visually_hidden_prefix: "Remove filter"
-            }
-          ]
-        } %>
+        <% if filters_presenter.any_filters? %>
+          <%= render "components/filter_summary", {
+            clear_all_href: filters_presenter.reset_url,
+            clear_all_text: "Clear all filters",
+            heading_level: 3,
+            heading_text: "Selected filters",
+            filters: filters_presenter.summary_items,
+          } %>
+        <% end %>
 
         <% if result_set_presenter.total_count.positive? %>
           <%= render "govuk_publishing_components/components/document_list", {
