--- a/app/views/components/_filter_section.html.erb
+++ b/app/views/components/_filter_section.html.erb
@@ -7,14 +7,26 @@
   visually_hidden_heading_prefix ||= ""
   heading_level ||= 2
   summary_aria_attributes ||= {}
+  index_section ||= 0
+  index_section_count ||= 1
 
   component_helper = GovukPublishingComponents::Presenters::ComponentWrapperHelper.new(local_assigns)
+  component_helper.add_data_attribute({ module: "filter-section" })
   component_helper.add_class("app-c-filter-section")
   component_helper.set_open(open)
 %>
 
 <%= tag.details(**component_helper.all_attributes) do %>
-  <%= tag.summary class: "app-c-filter-section__summary", aria: summary_aria_attributes do %>
+  <%= tag.summary class: "app-c-filter-section__summary", aria: summary_aria_attributes,
+      "data-ga4-expandable": true,
+      "data-ga4-event" => {
+        event_name: "select_content",
+        type: "finder",
+        section: heading_text,
+        text: heading_text,
+        index: index_section + 1,
+        index_total: index_section_count
+      }.to_json do %>
       <%= content_tag("h#{heading_level}", class: "app-c-filter-section__summary-heading") do %>
         <% if visually_hidden_heading_prefix.present? %>
           <span class="govuk-visually-hidden"><%= visually_hidden_heading_prefix %></span>
